# summary-_tech

./: .gitignore  app.py  chain_of_density.py  chat.py  counter.py  dataf.py  dataset.py  field_report.py  hrl.py  jsoncheck.ipynb  llam_app.py  map_reduce.py  movie_rec.py  new.json  new.py  ollama_def.py  output.csv  output.json  output_new.csv  output_new.json  pyproject.toml  refine.py  scorer.py  summarizer.py  test.py
